[package]
name = "utc-offset"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["time", "formatting", "local-offset", "parsing"]
repository = "https://github.com/gadunga/utc_offset"
description = "When you absolutely NEED the UTC offset"
authors = ["gadunga <richard.meester@gmail.com>"]

[dependencies]
log = "0.4.13"
once_cell = "1.9.0"
thiserror = "1.0.30"
time = { version = "0.3.5", features = [
    "formatting",
    "local-offset",
    "parsing",
] }

[dev-dependencies]
regex = "1.5.4"