[package]
name = "utc-offset"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["time", "formatting", "local-offset", "parsing"]
repository = "https://github.com/gadunga/utc_offset"
description = "When you absolutely NEED the UTC offset"
authors = ["gadunga <richard.meester@gmail.com>"]

[dependencies]
once_cell = "1.9.0"
parking_lot = "0.12.1"
thiserror = "1.0.30"
time = { version = "0.3.5", features = [
    "formatting",
    "local-offset",
    "parsing",
    "macros",
] }

[dev-dependencies]
regex = "1.5.4"
